--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
                 <h2>Experiencia Profesional</h2>
                 <article class="job">
                     <h3 class="job-title">Analista de Operaciones de Servicio</h3>
-                    <p class="job-company">GO Integro, CABA</p>
+                    <p class="job-company">GOIntegro-Edenred, CABA</p>
                     <p class="job-date">Noviembre de 2022 - Presente</p>
                     <ul class="job-description">
+                        <li>Chatbot:Diseño de workflows en Intercom, para gestionar de manera eficiente las consultas de usuarios y leads, optimizando el proceso de autogestión<li>
                         <li>Desarrollo de automatizaciones para procesos masivos y generación de reportes con Google App Script, GitHub y Make.</li>
                         <li>Soporte de segundo nivel sobre Salesforce, resolviendo requerimientos de clientes internos y externos.</li>
                         <li>Administración de backend de clientes en MySQL, gestionando configuraciones y permisos de usuarios.</li>
@@ -122,7 +123,6 @@
                     <div class="timeline-content">
                         <h3 class="job-title">Wavy Global (now Sinch LatAm)</h3>
                         <p class="job-company">Palermo, Buenos Aires</p>
-                        <p class="job-date">Duración total: 4 años y 2 meses</p>
                         <div class="timeline-roles">
                             <div class="timeline-role-item">
                                 <h4 class="progression-title">Customer Service Analyst Level 2</h4>
