--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     <p class="job-company">GOIntegro-Edenred, CABA</p>
                     <p class="job-date">Noviembre de 2022 - Presente</p>
                     <ul class="job-description">
-                        <li>Chatbot:Diseño de workflows en Intercom, para gestionar de manera eficiente las consultas de usuarios y leads, optimizando el proceso de autogestión<li>
+                        <li>Chatbot:Diseño de workflows en Intercom, para gestionar de manera eficiente las consultas de usuarios y leads, optimizando el proceso de autogestión</li>
                         <li>Desarrollo de automatizaciones para procesos masivos y generación de reportes con Google App Script, GitHub y Make.</li>
                         <li>Soporte de segundo nivel sobre Salesforce, resolviendo requerimientos de clientes internos y externos.</li>
                         <li>Administración de backend de clientes en MySQL, gestionando configuraciones y permisos de usuarios.</li>
